# craysim_minimal

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README.md  main.cpp
data/: .gitignore
data/eyes/: poly.eye
